--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -107,6 +107,9 @@
             <th class="adminName">담당 업무</th>
             <th class="adimnEmail">담당자 이메일</th>
             <th>
+              관리자 계정 정보 수정
+            </th>
+            <th>
               관리자 계정 삭제
             </th>
           </tr>
