--- a/src/main/resources/templates/searchBookPage/bookDetail.html
+++ b/src/main/resources/templates/searchBookPage/bookDetail.html
@@ -75,78 +75,89 @@
       <span th:text="${book.bookTitle}">책 제목</span> 리뷰
     </div>
 
-    <!-- 리뷰 반복 출력 -->
-    <div class="wrap">
+    <!-- 리뷰 불러오기 반복 출력 -->
+    <div class="wrap" >
       <div th:each="review : ${reviews}">
         <!-- 리뷰 별점 -->
-        <div class="rating">
+        <div  class="rating readonly"  th:attr="data-review-no=${review.reviewNo}">
           <!-- 0.5 점 -->
           <label class="rating__label rating__label--half" th:for="|starhalf-${review.reviewNo}|">
             <input type="radio" th:id="|starhalf-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="0.5" th:checked="${review.reviewScore == 0.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="0.5" th:checked="${review.reviewScore == 0.5}" 
+               disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 1 점 -->
           <label class="rating__label rating__label--full" th:for="|star1-${review.reviewNo}|">
             <input type="radio" th:id="|star1-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="1" th:checked="${review.reviewScore == 1}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="1" th:checked="${review.reviewScore == 1}"
+              disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 1.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star1half-${review.reviewNo}|">
             <input type="radio" th:id="|star1half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="1.5" th:checked="${review.reviewScore == 1.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="1.5" th:checked="${review.reviewScore == 1.5}" 
+               disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 2 점 -->
           <label class="rating__label rating__label--full" th:for="|star2-${review.reviewNo}|">
             <input type="radio" th:id="|star2-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="2" th:checked="${review.reviewScore == 2}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="2" th:checked="${review.reviewScore == 2}" 
+               disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 2.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star2half-${review.reviewNo}|">
             <input type="radio" th:id="|star2half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="2.5" th:checked="${review.reviewScore == 2.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="2.5" th:checked="${review.reviewScore == 2.5}"
+               disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 3 점 -->
           <label class="rating__label rating__label--full" th:for="|star3-${review.reviewNo}|">
             <input type="radio" th:id="|star3-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="3" th:checked="${review.reviewScore == 3}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="3" th:checked="${review.reviewScore == 3}" 
+               disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 3.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star3half-${review.reviewNo}|">
             <input type="radio" th:id="|star3half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="3.5" th:checked="${review.reviewScore == 3.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="3.5" th:checked="${review.reviewScore == 3.5}" 
+              disabled>
+             
             <span class="star-icon"></span>
           </label>
 
           <!-- 4 점 -->
           <label class="rating__label rating__label--full" th:for="|star4-${review.reviewNo}|">
             <input type="radio" th:id="|star4-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="4" th:checked="${review.reviewScore == 4}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="4" th:checked="${review.reviewScore == 4}"
+               disabled>
             <span class="star-icon"></span>
           </label>
 
           <!-- 4.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star4half-${review.reviewNo}|">
             <input type="radio" th:id="|star4half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="4.5" th:checked="${review.reviewScore == 4.5}" disabled>
-            <span class="star-icon"></span>
+              th:name="|rating-${review.reviewNo}|" value="4.5" th:checked="${review.reviewScore == 4.5}"
+               disabled>
+              <span class="star-icon"></span>
           </label>
 
           <!-- 5 점 -->
           <label class="rating__label rating__label--full" th:for="|star5-${review.reviewNo}|">
             <input type="radio" th:id="|star5-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="5" th:checked="${review.reviewScore == 5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="5" th:checked="${review.reviewScore == 5}"
+               disabled>
             <span class="star-icon"></span>
           </label>
         </div>
@@ -158,7 +169,8 @@
             <div class="review-main" style="flex: 3;">
               <div class="review-title-line">
                 <!-- 리뷰 제목 -->
-                <input type="text" th:value="${review.reviewTitle}" class="review-title-input" readonly>
+                <input type="text" th:value="${review.reviewTitle}" class="review-title-input" 
+                th:attr="data-review-no=${review.reviewNo}" readonly>
 
                 <!-- 작성일 및 작성자 정보 -->
                 <div class="review-meta-inline">
@@ -183,13 +195,13 @@
               <!-- 리뷰 내용 -->
               <div class="review-content">
                 <textarea name="content" id="content" class="review-content-textarea" th:text="${review.reviewContent}"
-                  readonly>리뷰 내용 작성 내용입니다.</textarea>
+                th:attr="data-review-no=${review.reviewNo}" readonly>리뷰 내용 작성 내용입니다.</textarea>
               </div>
 
               <!-- 수정 및 삭제 버튼 (로그인 사용자 본인만 보이도록 설정 필요) -->
               <div class="review-actions" th:if="${memberId != null and memberId == review.memberId}">
-                <button type="button" id="updateReview">수정</button>
-                <button type="button" id="deleteReview" th:onclick="deleteReview(${review.reviewNo})">삭제</button>
+                <button type="button" id="updateReview"  th:attr="data-review-no=${review.reviewNo}">수정</button>
+                <button type="button" id="deleteReview" th:attr="data-review-no=${review.reviewNo}">삭제</button>
               </div>
             </div>
           </div>
@@ -197,7 +209,9 @@
       </div>
     </div>
   </section>
+  <!-- 리뷰 불러오기 END -->
 
+<!--  리뷰 작성 -->
   <section class="review-write-section">
     <form id="writeReviewForm" method="post" action="/searchBookPage/writeReview" enctype="multipart/form-data">
       <input type="hidden" name="bookNo" th:value="${book.bookNo}">
